--- a/metapackage.yml
+++ b/metapackage.yml
@@ -64,6 +64,9 @@ debian:
     - dunst
     - stow
     - apt-file
+    - libgtk-4-dev
+    - libgtk4-layer-shell-dev
+    - libadwaita-1-dev
     # local packages:
     - hyprland
     - hyprlock
