--- a/metapackage.yml
+++ b/metapackage.yml
@@ -8,31 +8,18 @@ debian:
     %:
     	dh $@
   dependencies:
-    - ${shlibs:Depends}
-
-    - wireplumber
-    - rtkit
-    - pipewire-pulse
-
-    - network-manager
-
-    - greetd
-    - tuigreet
-
     # Gnome
-    # - gnome-session
+    - gnome-session
     - nautilus
     - gnome-system-monitor
     - gnome-icon-theme
     - gnome-terminal
-    # - network-manager-gnome
 
     # UI apps
     - flatpak
     - localsend
     - blanket
     - mpv
-    - pavucontrol
     - transmission-gtk
     - amberol
     - loupe
@@ -40,10 +27,8 @@ debian:
     - baobab
     - d-spy
     - file-roller
-    - gnote
     - obfuscate
     - zenity
-    - mangl
 
     # Dev tools
     - build-essential
@@ -72,7 +57,6 @@ debian:
     - just
     - git-delta
     - bat
-    - micro
     - fastfetch
     - htop
     - nano
@@ -85,20 +69,6 @@ debian:
     - wget
     - curl
 
-    # Hyprland
-    - hyprland
-    - hyprlock
-    - swaybg
-    - gjs
-    - dunst
-    - fonts-font-awesome
-    - wl-clipboard
-    - wofi
-    - wf-recorder
-    - slurp
-    - grim
-    - cliphist
-
     # Libs
     - libjemalloc2
     - libjemalloc-dev
@@ -108,7 +78,6 @@ debian:
     - libvte-2.91-gtk4-dev
     - gir1.2-nm-1.0
     - blueprint-compiler
-    - libgnome-volume-control
 
     # Debian
     - apt-listbugs
