--- a/layer-shell.yml
+++ b/layer-shell.yml
@@ -7,6 +7,7 @@ install:
   - libgtk-4-dev
   - libgtk4-layer-shell-dev
   - libvte-2.91-gtk4-dev
+  - libsoup-3.0-dev
   - /shared/deb-latest/libgnome-volume-control.deb
 debian:
   control:
@@ -21,3 +22,5 @@ debian:
   dependencies:
     - ${shlibs:Depends}
     - libgnome-volume-control
+    - fonts-font-awesome
+    - fonts-weather-icons
