add libssl-dev as layer-shell dependency

--- a/layer-shell.yml
+++ b/layer-shell.yml
@@ -8,6 +8,7 @@ install:
   - libvte-2.91-gtk4-dev
   - libasound2-dev
   - libdbus-1-dev
+  - libssl-dev
 debian:
   control:
     description: A custom layer shell
