--- a/.github/workflows/build-base-docker-image.yml
+++ b/.github/workflows/build-base-docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
-      - run: docker build . --file Dockerfile.base --tag $IMAGE_NAME --label "runnumber=$GITHUB_RUN_ID"
+      - run: docker build . --file docker/Dockerfile.base --tag $IMAGE_NAME --label "runnumber=$GITHUB_RUN_ID"
       - run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - run: |
           docker tag $IMAGE_NAME $IMAGE_ID:latest
