--- a/aquamarine.yml
+++ b/aquamarine.yml
@@ -1,7 +1,5 @@
-name: aquamarine
-code:
-  strategy: wget-latest-release
-  github: hyprwm/aquamarine
+version: "0.5.0"
+git_clone: https://github.com/hyprwm/aquamarine.git
 install:
   - /shared/deb-latest/hyprwayland-scanner.deb
   - /shared/deb-latest/hyprutils.deb
@@ -21,6 +19,9 @@ debian:
   rules: |
     %:
     	dh $@ --buildsystem=cmake --parallel
+
+    override_dh_auto_build:
+    	cd obj-x86_64-linux-gnu && make -j`nproc` VERBOSE=1
 
     override_dh_auto_test:
     	echo "Skipping dh_auto_test..."
