--- a/layer-shell.yml
+++ b/layer-shell.yml
@@ -4,7 +4,7 @@ install:
   - libgtk-4-dev
   - libgtk4-layer-shell-dev
   - libvte-2.91-gtk4-dev
-  - libasound2-dev
+  - libpipewire-0.3-dev
   - libdbus-1-dev
   - libssl-dev
 debian:
