--- a/aquamarine.yml
+++ b/aquamarine.yml
@@ -1,9 +1,11 @@
-version: "0.5.0"
+version: "0.5.1"
 git_clone: https://github.com/hyprwm/aquamarine.git
 install:
+  - libgles2-mesa-dev
+
   - /shared/deb-latest/hyprwayland-scanner.deb
   - /shared/deb-latest/hyprutils.deb
-  - libgles2-mesa-dev
+
   - libseat-dev
   - libinput-dev
   - libwayland-dev
@@ -11,6 +13,7 @@ install:
   - libpixman-1-dev
   - libdrm-dev
   - libgbm-dev
+  - libudev-dev
   - libdisplay-info-dev
   - hwdata
 debian:
