start rewriting in rust

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,27 @@
-FROM ghcr.io/iliabylich/debian-unstable-builder:latest
+FROM debian:unstable
 
-CMD ["/shared/docker/build.sh"]
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt update && \
+    apt install --no-install-recommends -y \
+        wget \
+        curl \
+        git \
+        debhelper \
+        cmake \
+        pkg-config \
+        jq \
+        yq \
+        g++ \
+    && apt install -y ca-certificates && \
+    update-ca-certificates && \
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > /tmp/rustup-init.sh && \
+    chmod +x /tmp/rustup-init.sh && \
+    /tmp/rustup-init.sh --profile minimal -y && \
+    apt clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/*
+
+COPY --chmod=777 target/release/build-deb-package /bin/build-deb-package
+
+ENTRYPOINT ["/bin/build-deb-package", "run"]
