--- a/.github/workflows/rebuild-builder-bin.yml
+++ b/.github/workflows/rebuild-builder-bin.yml
@@ -34,7 +34,7 @@ jobs:
           artifacts: target/release/build-deb-package
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: docker build . --file docker/Dockerfile --tag $IMAGE_NAME --label "runnumber=$GITHUB_RUN_ID"
+      - run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=$GITHUB_RUN_ID"
       - run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - run: docker tag $IMAGE_NAME $IMAGE_ID:latest
       - run: docker push $IMAGE_ID:latest
