--- a/mangl.toml
+++ b/mangl.toml
@@ -21,4 +21,4 @@ dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
 "%" = ["dh $@"]
-override_dh_usrlocal = ["echo \"Skipping dh_usrlocal...\""]
+override_dh_usrlocal = ["echo skip"]
