--- a/syshud.toml
+++ b/syshud.toml
@@ -24,4 +24,4 @@ override_dh_auto_build = ["make all"]
 override_dh_auto_install = [
     "make install DESTDIR=\"debian/syshud\" PREFIX=\"/usr\"",
 ]
-override_dh_usrlocal = ["echo \"Skipping dh_usrlocal...\""]
+override_dh_usrlocal = ["echo skip"]
