--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ clap = { version = "4.5", features = ["derive"] }
 miette = { version = "7.4", features = ["fancy"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
+anstyle = "1.0"
