--- a/layer-shell.toml
+++ b/layer-shell.toml
@@ -24,7 +24,9 @@ dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
 "%" = ["dh $@"]
-override_dh_auto_build = ["/root/.cargo/bin/cargo build --release"]
+override_dh_auto_build = [
+    "CARGO_TERM_COLOR=always /root/.cargo/bin/cargo build --release",
+]
 override_dh_auto_install = [
     "install -Dm0755 target/release/layer-shell-ui debian/layer-shell/usr/bin/layer-shell",
 ]
