--- a/mangl.toml
+++ b/mangl.toml
@@ -17,6 +17,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "An enhanced man page viewer for linux and BSD systems based on OpenGL and mandoc libraries"
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
