--- a/aquamarine.toml
+++ b/aquamarine.toml
@@ -28,6 +28,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "Aquamarine is a very light linux rendering backend library"
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
