--- a/fx.toml
+++ b/fx.toml
@@ -8,6 +8,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "Terminal JSON viewer & processor"
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
