--- a/hyprgraphics.toml
+++ b/hyprgraphics.toml
@@ -19,6 +19,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "Hyprland graphics / resource utilities"
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
