--- a/hyprland.toml
+++ b/hyprland.toml
@@ -44,6 +44,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "Hyprland is an independent, highly customizable, dynamic tiling Wayland compositor that doesn't sacrifice on its looks."
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
