--- a/hyprlock.toml
+++ b/hyprlock.toml
@@ -28,6 +28,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "Hyprland's GPU-accelerated screen locking utility"
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
