--- a/layer-shell.toml
+++ b/layer-shell.toml
@@ -20,6 +20,7 @@ compat = { version = 10 }
 
 [debian.control]
 description = "A custom layer shell"
+arch = "amd64"
 dependencies = ["${shlibs:Depends}"]
 
 [debian.rules]
