--- a/metapackage.toml
+++ b/metapackage.toml
@@ -102,6 +102,8 @@ dependencies = [
     "layer-shell",
     "pavucontrol",
     "syshud",
+    "hyprsunset",
+    "hyprland-qtutils",
 ]
 
 [debian.rules]
