simplify cosmic rules

--- a/cosmic/cosmic-greeter.toml
+++ b/cosmic/cosmic-greeter.toml
@@ -15,17 +15,10 @@ additionally_produced_packages = ["cosmic-greeter-daemon"]
 [source.git-clone]
 url = "https://github.com/pop-os/cosmic-greeter.git"
 branch_or_tag = "epoch-1.0.0-alpha.4"
-post_clone_scripts = ["sed -i s/0.1.0/1.0.0-alpha4/g debian/changelog"]
+post_clone_scripts = [
+    "sed -i s/0.1.0/1.0.0-alpha4/g debian/changelog",
+    "sed -i s/vendored/release/g debian/rules",
+]
 
 [debian]
 changelog = false
-
-[debian.rules]
-"%" = ["dh $@"]
-override_dh_auto_build = ["just build-release"]
-override_dh_auto_install = ["just rootdir=debian/tmp install-debian"]
-execute_after_dh_install = ["dh_installpam", "dh_installsysusers"]
-override_dh_installsystemd = [
-    "dh_installsystemd -pcosmic-greeter --no-start -r cosmic-greeter.service",
-    "dh_installsystemd -pcosmic-greeter-daemon cosmic-greeter-daemon.service",
-]
