--- a/cosmic/cosmic-app-library.toml
+++ b/cosmic/cosmic-app-library.toml
@@ -7,15 +7,10 @@ path = ["/root/.cargo/bin"]
 [source.git-clone]
 url = "https://github.com/pop-os/cosmic-applibrary.git"
 branch_or_tag = "epoch-1.0.0-alpha.4"
-post_clone_scripts = ["sed -i s/0.1.0/1.0.0-alpha4/g debian/changelog"]
+post_clone_scripts = [
+    "sed -i s/0.1.0/1.0.0-alpha4/g debian/changelog",
+    "sed -i s/vendored/release/g debian/rules",
+]
 
 [debian]
 changelog = false
-
-[debian.rules]
-"%" = ["dh $@"]
-"override_dh_shlibdeps" = [
-    "dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info",
-]
-override_dh_auto_build = ["just build-release"]
-override_dh_install = ["just rootdir=debian/cosmic-app-library install"]
