--- a/ghostty.toml
+++ b/ghostty.toml
@@ -23,7 +23,10 @@ dependencies = ["${shlibs:Depends}"]
 [debian.rules]
 "%" = ["dh $@"]
 override_dh_auto_configure = ["echo skip"]
-override_dh_auto_build = ["zig version", "zig build -Doptimize=ReleaseFast"]
+override_dh_auto_build = [
+    "zig version",
+    "zig build -Doptimize=ReleaseFast -fsys=fontconfig",
+]
 override_dh_auto_install = [
     "install -Dm0755 zig-out/bin/ghostty debian/ghostty/usr/bin/ghostty",
 ]
