temporary comment out currently unused packages

--- a/metapackage.toml
+++ b/metapackage.toml
@@ -16,22 +16,22 @@ dependencies = [
     "gnome-system-monitor",
     "gnome-terminal",
     "tuigreet",
+    "greetd",
 
     # UI apps
-    "flatpak",
+    # "flatpak",
     "localsend",
-    "blanket",
-    "mpv",
-    "transmission-gtk",
-    "amberol",
+    # "blanket",
+    # "mpv",
+    # "transmission-gtk",
+    # "amberol",
     "loupe",
-    "gedit",
-    "baobab",
+    # "gedit",
+    # "baobab",
     "d-spy",
-    "file-roller",
-    "obfuscate",
-    "zenity",
-    "kitty",
+    # "file-roller",
+    # "obfuscate",
+    # "zenity",
     "firefox",
     "ghostty",
 
