--- a/layer-shell.toml
+++ b/layer-shell.toml
@@ -7,7 +7,7 @@ dependencies = [
     "libdbus-1-dev",
     "libssl-dev",
     "libclang1",
-    "clang-19",
+    "clang",
 ]
 arch = "amd64"
 path = ["/root/.cargo/bin"]
