--- a/hypr/hyprland-qtutils.toml
+++ b/hypr/hyprland-qtutils.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.1.1" }
+version = { specific = "0.1.3" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
 
@@ -11,6 +11,7 @@ dependencies = [
     "qml6-module-qtwayland-compositor",
 
     "qml6-module-qtcore",
+    "qml6-module-qtqml",
     "qml6-module-qtqml-workerscript",
     "qml6-module-qtqml-models",
     "qml6-module-qtquick",
@@ -24,7 +25,7 @@ arch = "amd64"
 
 [source.git-clone]
 url = "https://github.com/hyprwm/hyprland-qtutils.git"
-branch_or_tag = "v0.1.1"
+branch_or_tag = "v0.1.3"
 
 [debian]
 changelog = true
