--- a/hypr/hyprsunset.toml
+++ b/hypr/hyprsunset.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.1.0" }
+version = { specific = "0.1.0-1" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
     "/shared/deb-latest/hyprwayland-scanner.deb",
