--- a/metapackage.toml
+++ b/metapackage.toml
@@ -35,6 +35,7 @@ dependencies = [
     "firefox",
     "ghostty",
     "spot",
+    "timeshift",
 
     # Dev tools
     "build-essential",
@@ -81,6 +82,7 @@ dependencies = [
     "fx",
     "starship",
     "du-dust",
+    "timeshift-autosnap-apt",
 
     # Libs
     "libjemalloc2",
