add hyprland-qt-support as a dependency

--- a/metapackage.toml
+++ b/metapackage.toml
@@ -115,6 +115,7 @@ dependencies = [
     "hyprland-qtutils",
     "hyprsysteminfo",
     "hyprpolkitagent",
+    "hyprland-qt-support",
 ]
 
 [debian.rules]
