add make-btrfs-snapshot as a dependency of metapackage

--- a/metapackage.toml
+++ b/metapackage.toml
@@ -101,7 +101,7 @@ dependencies = [
 
     # Debian
     "apt-file",
-    "timeshift-autosnap-apt",
+    "make-btrfs-snapshot",
 
     # Hyprland
     "hyprland",
