--- a/hypr/hyprland.toml
+++ b/hypr/hyprland.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.47.0" }
+version = { specific = "0.47.0-1" }
 dependencies = [
     "ninja-build",
     "libgles2-mesa-dev",
@@ -50,7 +50,7 @@ dependencies = ["${shlibs:Depends}"]
 [debian.rules]
 override_dh_auto_configure = ["echo skip"]
 override_dh_auto_build = [
-    "cmake --no-warn-unused-cli -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_INSTALL_PREFIX:STRING=${PREFIX} -S . -B ./build",
+    "cmake --no-warn-unused-cli -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_INSTALL_PREFIX:STRING=/usr -S . -B ./build",
     "cmake --build ./build --config Release --target all -j`nproc`",
 ]
 override_dh_auto_install = [
