update metapackage deps

--- a/metapackage.toml
+++ b/metapackage.toml
@@ -32,7 +32,6 @@ dependencies = [
     # "file-roller",
     # "obfuscate",
     # "zenity",
-    "firefox",
     "ghostty",
     "spot",
     "timeshift",
@@ -61,6 +60,8 @@ dependencies = [
     "linux-perf",
     "gdb",
     "sassc",
+    "autoconf",
+    "automake",
 
     # CLI
     "hugo",
@@ -92,6 +93,16 @@ dependencies = [
     "apache2-utils",
     "wireplumber",
     "delta",
+    "bash-completion",
+    "file",
+    "less",
+    "sudo",
+    "fakeroot",
+    "openssh-client",
+    "zip",
+    "unzip",
+    "pkexec",
+    "logrotate",
 
     # Libs
     "libjemalloc2",
@@ -109,41 +120,6 @@ dependencies = [
     "apt-file",
     "make-btrfs-snapshot",
     "xwayland",
-
-    # System
-    "autoconf",
-    "automake",
-    "bash-completion",
-    "btrfs-progs",
-    "file",
-    "less",
-    "fakeroot",
-    "man-db",
-    "manpages",
-    "sudo",
-    "upower",
-    "vim-tiny",
-    "grub-common",
-    "grub2-common",
-    "apparmor",
-    "busybox",
-    "discover",
-    "efibootmgr",
-    "iproute2",
-    "iputils-ping",
-    "isc-dhcp-client",
-    "lsb-release",
-    "locales",
-    "ncurses-term",
-    "network-manager",
-    "openssh-client",
-    "polkitd",
-    "usbutils",
-    "util-linux-locales",
-    "wireless-tools",
-    "zlib1g",
-    "bind9-dnsutils",
-    "bind9-host",
 
     # Hyprland
     "hyprland",
