--- a/hypr/hyprland.toml
+++ b/hypr/hyprland.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.47.0-1" }
+version = { specific = "0.47.2" }
 dependencies = [
     "ninja-build",
     "libgles2-mesa-dev",
@@ -37,7 +37,7 @@ arch = "amd64"
 
 [source.git-clone]
 url = "https://github.com/hyprwm/hyprland.git"
-branch_or_tag = "v0.47.0"
+branch_or_tag = "v0.47.2"
 
 [debian]
 changelog = true
