--- a/hypr/hyprlang.toml
+++ b/hypr/hyprlang.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.6.0" }
+version = { specific = "0.6.0-1" }
 dependencies = ["/shared/deb-latest/hyprutils.deb"]
 arch = "amd64"
 
