--- a/hypr/xdg-desktop-portal-hyprland.toml
+++ b/hypr/xdg-desktop-portal-hyprland.toml
@@ -1,4 +1,4 @@
-version = { specific = "1.3.9" }
+version = { specific = "1.3.9-1" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
     "/shared/deb-latest/hyprlang.deb",
